--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
       <header id="header" class="fixed-top header-transparent">
          <div class="container">
             <div class="logo float-left">
-               <h1 class="text-light"> <img src="logo.png"><a href="index.html"><span>THE SOLAR PLANSET</span></a></h1>
+               <h1 class="text-light"> <img src="logo.jpeg"><a href="index.html"><span>THE SOLAR PLANSET</span></a></h1>
             </div>
             <nav class="nav-menu float-right d-none d-lg-block">
                <ul>
