--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container">
 
       <div class="logo float-left">
-        <h1 class="text-light">  <img src="logo.png" class="img-fluid"><a href="index.html"><span>The Solar Planset</span></a></h1>
+        <h1 class="text-light">  <img src="logo.jpeg" class="img-fluid"><a href="index.html"><span>The Solar Planset</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
