--- a/services.html
+++ b/services.html
@@ -79,7 +79,7 @@
       <div class="container">
         <div class="logo float-left">
           <h1 class="text-light">
-           <img src="logo.png">
+           <img src="logo.jpeg">
             <a href="index.html"><span>THE SOLAR PLANSET</span></a>
           </h1>
           <!-- Uncomment below if you prefer to use an image logo -->
