--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 
       <div class="logo float-left">
 
-        <h1 class="text-light"> <img src="logo.jpeg"><a href="index.html"><span> THE SOLAR PLANSET/span></a></h1>
+        <h1 class="text-light"> <img src="logo.jpeg"><a href="index.html"><span> THE SOLAR PLANSET</a></h1>
        
       </div>
 
@@ -111,20 +111,20 @@
         
          <div class="col-md-6 ">
             <div class="card">
-               <img src="img/coo.jpeg" class="card-img-top rounded-circle top" alt="...">
+               <img src="img/ceo.jpg" class="card-img-top rounded-circle" alt="...">
                <div class="card-body">
-                  <h5 class="card-title">COO</h5>
-                  <p class="card-text"><STrong>Yash Gautam</STrong> "A experienced engineer from enphase that has 10 years of experience and have worked in 50 states doing designs and engineering.
+                  <h5 class="card-title">CEO</h5>
+                  <p class="card-text"> <STrong>AYMANE HARAKAT</STrong> "Renewable Energy has been my passion for the past 9 years, we help solar company’s scale their installs and focus on what’s important by taking away all design and engineering worries while making it more affordable then their in-house designers."</p>
                   </p>
                </div>
             </div>
          </div>
          <div class="col-md-6 ">
           <div class="card">
-             <img src="img/ceo.jpg" class="card-img-top rounded-circle" alt="...">
+             <img src="img/coo.jpeg" class="card-img-top rounded-circle top" alt="...">
              <div class="card-body">
-                <h5 class="card-title">CEO</h5>
-                <p class="card-text"> <STrong>AYMANE HARAKAT</STrong> "Renewable Energy has been my passion for the past 9 years, we help solar company’s scale their installs and focus on what’s important by taking away all design and engineering worries while making it more affordable then their in-house designers."</p>
+                <h5 class="card-title">COO</h5>
+                <p class="card-text"><STrong>Yash Gautam</STrong> "A experienced engineer from enphase that has 10 years of experience and have worked in 50 states doing designs and engineering.
              </div>
           </div>
        </div>
